Fix gh-555: Squished News Icons

--- a/src/views/splash/splash.scss
+++ b/src/views/splash/splash.scss
@@ -24,6 +24,7 @@
 
         .news {
             width: 40%;
+            flex-shrink: 0;
         }
     }
 
